Inicio de homepage

--- a/ejemplo-04-ecomerce/index.html
+++ b/ejemplo-04-ecomerce/index.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tienda de Muebles De Occidente</title>
+
+    <link rel="stylesheet" href="./assets/css/style.css">
+
 </head>
 <body>
     <header>
-        <h1>Tienda Muebles de Occidente</h1>
+        <h1>Tienda <span>Muebles de Occidente</span></h1>
     </header>
 
-    <nav>
+    <nav id="navegacion">
         <a href="javascript:void(0)">Inicio</a>
         <a href="javascript:void(0)">Nosotros</a>
         <a href="javascript:void(0)">Tienda</a>
@@ -103,7 +106,7 @@
         <footer>
             <>
                 <h3>Categorias</h3>
-                <nav>
+                <nav class="navegacion-categorias">
                     <a href="javascript:void(0)">Cocina</a>
                     <a href="javascript:void(0)">Oficina</a>
                     <a href="javascript:void(0)">Jardin</a>
